<resources>
    <string name="app_name">WIMTA</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="change_profile_photo">Upload Profile Photo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="logout">Logout</string>
</resources>
