<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCreateBasicProfile"
    android:background="@drawable/ui">

    <TextView
        android:id="@+id/createProfileHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="Create Your Profile"
        android:textColor="#FFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/form"
        android:layout_below="@+id/createProfileHeader"
        android:layout_marginTop="40dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_insert_emoticon_black_24dp"
            android:id="@+id/userProfileImage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/btnChangeProfilePhoto"
            android:text="@string/change_profile_photo"
            android:textAllCaps="true"
            android:textColor="#909090"
            android:textSize="12sp"
            android:layout_marginBottom="25dp"
            android:layout_marginTop="5dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/fullName">

            <android.support.design.widget.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/name"
                android:inputType="text"
                android:textColorHint="#FFF"
                android:focusedByDefault="true"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:layout_width="350dp"
                android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:imeOptions="actionGo"
                android:textColor="#FFF"
                android:hint="@string/username"
                android:textColorHint="#FFF"
                />

        </android.support.design.widget.TextInputLayout>
        <Switch
            android:id="@+id/switch3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="134dp"
            android:text="Are you a TA?"
            android:textColor="#FFF"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:background="#FFF"
        android:elevation="2dp"
        android:text="Next"
        android:textColor="#940404"
        android:textStyle="bold" />




</RelativeLayout>