<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/gradient"
        android:gravity="center"
        android:id="@+id/image">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@mipmap/transparent_logo"
            android:layout_gravity="center"
            android:contentDescription="App Logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/image"
        android:id="@+id/loginForm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="WIMTA"
            android:layout_gravity="center_horizontal"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/emailLogin">

            <android.support.design.widget.TextInputEditText
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="text"
                android:focusedByDefault="true"
                android:imeOptions="actionNext" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/passwordLogin"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal">

            <android.support.design.widget.TextInputEditText
                android:layout_width="350dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:imeOptions="actionGo"
                android:textColor="#000000"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginForm"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/colorPrimaryDark"
        android:id="@+id/btnLogin"
        android:elevation="2dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_below="@+id/btnLogin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="OR"
            android:id="@+id/orText"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Create a new account. "
                android:textColor="@color/black"
                android:id="@+id/createAccountText"
                android:textStyle="italic"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sign up!"
                android:id="@+id/gotoSignUp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>